apps/base/nextcloud/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud-route
  namespace: nextcloud
  annotations:
    external-dns.alpha.kubernetes.io/hostname: nextcloud.seyzahl.com
spec:
  parentRefs:
    - name: nextcloud-gateway
      sectionName: http
  hostnames:
    - nextcloud.seyzahl.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nextcloud-nextcloud  # Note: the service name is nextcloud-nextcloud
          port: 8080
          weight: 100
